# ddionrails

./: .devcontainer.json  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre_commit_unittest_handler.sh  .pyup.yml  .travis.yml  CHANGELOG.md  COPYRIGHT.NOTICE.md  COPYRIGHT.md  Dockerfile  LICENSE.md  Pipfile  README.md  docker-compose-ci.yml  docker-compose-dev.yml  docker-compose-remote-dev.yml  docker-compose-travis.yml  docker-compose.yml  entrypoint.sh  eslint.config.mjs  jest.config.js  jest.config.ts  log.txt  logging.conf  manage.py  package-lock.json  package.json  pavement.py  pyproject.toml  renovate.json  secrets.json.example  setup.cfg  tasks.py  test.html  translations.json  tsconfig.json  webpack-stats.json  (+1 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml  stale.yml
.github/workflows/: codeql.yml  system-tests.yml  test.yml
api/: urls.py  views.py
assets/js/: basket_button.js  basket_button.ts  basket_view_variable_buttons.ts  concept_table.js  description_modal.js  description_modal.ts  feedback.ts  focus_anchor.ts  index.js  index.ts  instrument_table.js  language_management.ts  question_comparison.js  question_comparison.ts  question_comparison_functions.js  question_images.ts  questions.js  questions.ts  search_feedback.ts  statistics.js  statistics.ts  statistics_navigation.js  statistics_navigation.ts  statistics_navigation_utils.ts  study_dropdown.ts  topics.js  topics.ts  transfer.js  transfer_categorical.js  transfer_navigation.js  types.ts  variable_labels.ts  variable_relations.ts  variable_relations_concepts.ts  variable_relations_toggle.ts  variable_view_basket_button.ts  variables.js  visualization.js
assets/scss/: basket.scss  description_modal.scss  index.scss  instrument_table.scss  question_comparison.scss  questions.scss  related_by_period.scss  search.scss  statistics.scss  statistics_navigation.scss  table_navigation.scss  topics.scss  transfer.scss  transfer_navigation.scss  variables.scss  visualization.scss
assets/types/: datatables.d.ts
concepts/: admin.py  forms.py  imports.py  models.py  views.py
concepts/migrations/: 0001_initial.py  0002_auto_20160923_1107.py  0003_auto_20181023_1024.py  0003_auto_20181128_1323.py  0004_auto_20181105_1646.py  0004_auto_20181203_1356.py  0005_auto_20181219_1617.py
config/: context_processors.py  helpers.py  urls.py  validators.py  views.py  wsgi.py  wsgi_hewing.py
config/settings/: base.py  development.py  hewing.py  production.py  staging.py  testing.py
data/: admin.py  forms.py  helpers.py  imports.py  models.py  urls.py  views.py
data/migrations/: 0001_initial.py  0002_variable_description_long.py  0002_variable_name_cs.py  0003_auto_20170516_1527.py  0003_dataset_name_cs.py  0004_dataset_boost.py  0005_auto_20171017_1738.py  0006_auto_20180926_1610.py  0007_auto_20180926_1719.py  0008_auto_20181203_1413.py  0008_variable_image_url.py  0009_auto_20181203_1423.py  0009_auto_20181219_1639.py
ddionrails/: helpers.py  mixins.py  models.py  urls.py  validators.py  views.py  wsgi.py  wsgi_hewing.py  wsgi_production.py
ddionrails/api/: helpers.py  related_fields.py  serializers.py  urls.py  views.py
ddionrails/base/: admin.py  exceptions.py  generic_documents.py  helpers.py  mixins.py  models.py  views.py
ddionrails/concepts/: admin.py  documents.py  forms.py  imports.py  models.py  resources.py  urls.py  views.py
ddionrails/data/: admin.py  documents.py  forms.py  helpers.py  imports.py  models.py  resources.py  urls.py  views.py
ddionrails/elastic/: helpers.py  mapping.json  mapping.yaml  mixins.py  urls.py  views.py
ddionrails/imports/: git_repos.py  helpers.py  importers.py  imports.py  manager.py  types.py
ddionrails/instruments/: admin.py  documents.py  forms.py  imports.py  models.py  resources.py  urls.py  views.py
ddionrails/migrations/: 0001_initial.py
ddionrails/publications/: admin.py  documents.py  forms.py  imports.py  models.py  resources.py  urls.py  views.py
ddionrails/statistics/: documents.py  imports.py  models.py  urls.py  views.py
ddionrails/studies/: admin.py  context_processors.py  forms.py  imports.py  models.py  resources.py  views.py
ddionrails/transfer/: apps.py  imports.py  models.py  urls.py  views.py
ddionrails/workspace/: admin.py  datafiles.json  datafiles_old.json  datafiles_with_long.json  forms.py  imports.py  mixins.py  models.py  resources.py  scripts.py  urls.py  views.py
docker/data_api/: Dockerfile  server.py
docker/ddionrails/: Dockerfile  dev.Dockerfile  entrypoint.sh
docker/environments/: database.env.example  django.env.example  elasticsearch.env.example  elasticsearch.yml  imprint_info.example.json
docker/nginx/: nginx.conf  nginx.dev.conf  nginx.example.conf
docker/postfix/: Dockerfile
docs/source/: conf.py  index.rst
elastic/: helpers.py  mapping.json  mixins.py  urls.py  views.py
imports/: imports.py  manager.py
instruments/: admin.py  forms.py  imports.py  models.py  qtest.py  urls.py  views.py
instruments/migrations/: 0001_initial.py  0002_auto_20161018_1404.py  0002_auto_20190329_1223.py  0003_auto_20181203_1411.py  0003_question_image_url.py  0003_question_label_de.py  (+1 more)
publications/: admin.py  forms.py  imports.py  models.py  urls.py  views.py
schema/: imprint_info.schema.json  studies.schema.json
scripts/: backup.py  development.sh  hewing.sh  import_studies.py  production.sh  ps.sh  setup.py  system.py
settings/: base.py  development.py  hewing.py  production.py  testing.py
static/: config.json
studies/: admin.py  helpers.py  imports.py  models.py  views.py
templates/: 400.html  403.html  404.html  500.html  base.html  base_basket.html  base_study.html  description_modal.html  elastic_test.html  ng_scripts.html  tracker.html
tests/: conftest.py  data_classes.py  factories.py  file_factories.py  model_factories.py  object_factories.py  status.py  test_factories.py  test_pavement_tasks.py
workspace/: admin.py  forms.py  imports.py  models.py  resources.py  scripts.py  urls.py  views.py
(+573 files in other folders)
